<resources>
    <string name="app_name" translatable="false">LMUconnect</string>
    <string name="app_profile">Profile</string>
    <string name="app_notification">Notification</string>
    <string name="app_home" translatable="false">⸻</string>
    <string name="app_study" translatable="false">⸻</string>
    <string name="app_social" translatable="false">⸻</string>
    <string name="app_menu" translatable="false">⸻</string>
    <string name="login_title">Login</string>
    <string name="login_email_title">Email</string>
    <string name="login_password_title">Password</string>
    <string name="login_btn_title">LOGIN</string>
    <string name="login_suggestion_line1">- OR -</string>
    <string name="login_suggestion_line2">Don\'t have an account in our app yet?</string>
    <string name="signup_title">Sign Up</string>
    <string name="login_pwd_hint">Enter your password</string>
    <string name="login_hint_email">Enter your campus email</string>
    <string name="signup_name_title">Full name</string>
    <string name="signup_email_title">Email</string>
    <string name="signup_phone_title">Phone number</string>
    <string name="signup_password_title">Password</string>
    <string name="signup_suggestion_line">Already have an Account?</string>
    <string name="signup_name_hint">Enter your full name</string>
    <string name="signup_email_hint">Enter your campus email</string>
    <string name="signup_pwd_hint">Enter your password</string>
    <string name="signup_phone_hint">Enter your phone number</string>
    <string name="menu_subtitle1">Favourites</string>
    <string name="menu_subtitle2">All links</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_finish">Finish</string>
    <string name="menu_edit_subtitle2">Others</string>
    <string name="menu_min_3_letters">Enter at least 3 letters</string>
    <string name="menu_valid_url">Enter a valid URL</string>
    <string name="menu_resolve_errors">Resolve all errors</string>
    <string name="menu_item_added">Menu item added</string>
    <string name="menu_add_name">Name</string>
    <string name="menu_add_name_desc">Enter a name</string>
    <string name="menu_add_url">URL</string>
    <string name="menu_add_url_desc">Enter a URL</string>
    <string name="menu_add_icon">Icon</string>
    <string name="study_subtitle1">Lectures</string>
    <string name="study_subtitle2">Practical Courses</string>
    <string name="study_floatingbtn_title_1">Course</string>
    <string name="study_floatingbtn_title_2">Event</string>
    <string name="study_floatingbtn_title_3">To-Do</string>
    <string name="study_tab_item1">COURSES</string>
    <string name="study_tab_item2">CALENDAR</string>
    <string name="study_tab_item3">TO-DO</string>
    <string name="study_no_courses_added">You don\'t have any courses added as of yet.</string>
    <string name="study_courseinfo_details">Details</string>
    <string name="study_courseinfo_events">Events</string>
    <string name="study_courses_no_roomfinder_link">No Roomfinder location is available for this event!</string>
    <string name="study_calendar_title_date_format">EEEE, MMM d</string>
    <string name="study_event_group">Group</string>
    <string name="course_filter_chipgroup1">Course Semester</string>
    <string name="course_filter_chips2">Department</string>
    <string name="study_course_filtering_menu_reset">Reset</string>
    <string name="study_course_filter_button">Show results</string>
    <string name="home_tv_title">News</string>
    <string name="home_cardview_from">from</string>
    <string name="social_floatingbtn_title_1">FRIEND</string>
    <string name="social_floatingbtn_title_2">GROUP</string>
    <string name="social_tab_item1">PERSONAL</string>
    <string name="social_tab_item2">GROUP</string>
    <string name="home_tv_title_2">Upcoming events</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="study_course_detail_lecturer">Lecturer</string>
    <string name="study_course_detail_language">Language</string>
    <string name="study_course_detail_department">Organisational unit</string>
    <string name="study_add_popup_message">"Register for exercise group: "</string>
    <string name="study_add_dialogue_cancel">Cancel</string>
    <string name="study_add_dialogue_ok">OK</string>
    <string name="study_course_type_lecture">Lecture</string>
    <string name="study_course_type_internship">Practical</string>
    <string name="study_course_type_seminar">Seminar</string>
    <string name="study_course_type_tutorial">Tutorial</string>
    <string name="study_course_type_exercise_course">Exercise course</string>
    <string name="study_course_register">Register for course</string>
    <string name="menu_edit_title">Edit menu</string>
    <string name="menu_add_new">Add new link</string>
    <string name="study_course_info_change_group">Change to group: </string>
    <string name="yesterday">Yesterday</string>
    <string name="social_gchat_group_member">Group member</string>
    <string name="social_chat_type_your_message">Type your message</string>
    <string name="social_add_group_title">Create group chat</string>
    <string name="app_confirm">Confirm</string>
    <string name="social_add_group_type">Group type</string>
    <string name="social_add_group_type_hint">Select the type of your group</string>
    <string name="social_add_group_name">Group name</string>
    <string name="social_add_group_name_hint">Enter the name of your group</string>
    <string name="social_add_friend_email_hint">Enter your friend\'s campus email</string>
    <string name="social_add_friend_email">Friend\'s email</string>
    <string name="social_add_friend_title">Add friend</string>
    <string name="social_profile_contact_infos">Contact infos</string>
    <string name="social_profile_social_networks">Social networks</string>
    <string name="social_profile_full_name">Full name</string>
    <string name="social_profile_lmu">LMU</string>
    <string name="social_profile_degree">Degree</string>
    <string name="social_profile_major">Major</string>
    <string name="social_profile_telephone">Telephone</string>
    <string name="social_profile_telephone_edit">Edit your telephone number</string>
    <string name="social_profile_instagram">Instagram</string>
    <string name="social_profile_instagram_edit">Edit your Instagram account</string>
    <string name="social_profile_github">Github</string>
    <string name="social_profile_github_edit">Edit your GitHub account</string>
    <string name="social_profile_discord">Discord</string>
    <string name="social_profile_discord_edit">Edit your discord account</string>
    <string name="social_profile_email">E-mail</string>
    <string name="social_group_list_add_enter_email">"Do you want to invite new members to this group? Please enter their email-address: "</string>
    <string name="social_group_leave">Are you sure to leave this group?</string>
    <string name="social_group_list_leave">Leave group</string>
    <string name="social_profile_log_out">Log out</string>
    <string name="social_profile_add_friend">Do you want to add this person to your friends list?</string>
    <string name="social_profile_remove_friend">Are you sure to remove this friend?</string>
    <string name="social_profile_no_phone">No phone number added yet</string>
    <string name="social_profile_no_discord">No Discord account added yet</string>
    <string name="social_profile_no_github">No Github account added yet</string>
    <string name="social_profile_no_instagram">No Instagram account added yet</string>
    <string name="social_group_members">Members</string>
    <string name="social_chat_is_typing"> is typing…</string>
    <string name="social_friend">Friend</string>
    <string name="study_calendar">Calendar</string>
    <string name="study_todo_not_implemented">Unfortunately, this functionality has not been implemented yet. Please come back later!</string>
    <string name="login_to_use">Please log in to use this functionality.</string>
    <string name="study_courses_search">Search</string>
    <string name="study_courses_filter">Filter</string>
    <string name="study_course_info_unregister">Unregister</string>
    <string name="study_course_info_lsf">View in LSF</string>
    <string name="study_course_info_share">Share</string>
    <string name="study_course_info_change_group_selection">Change group</string>
    <string name="social_group_member"> member</string>
    <string name="social_group_member_plural"> members</string>
    <string name="social_no_chats">No messages yet</string>

</resources>