<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/app_home"
        android:title="@string/app_home" />

    <item
        android:id="@+id/study"
        android:enabled="true"
        android:icon="@drawable/app_study"
        android:iconTint="@color/lmu_grayII"
        android:title="@string/app_study" />

    <item
        android:id="@+id/social"
        android:enabled="true"
        android:icon="@drawable/app_social"
        android:title="@string/app_social" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/app_menu"
        android:title="@string/app_menu"
        android:enabled="true" />
</menu>